# seyfr

./: .gitignore  JFFI_ANDROID_FIXES.md  Makefile  PRIVACY.md  README.md  SECURITY.md  jffi.toml
.cargo/: config.toml
.github/workflows/: release-linux.yml  release-windows.yml
cli/: README.md
cli/src/: main.rs
core/: Cargo.toml  README.md  uniffi.toml
core/.cargo/: config.toml
core/src/: android.rs  errors.rs  lib.rs  progress.rs  test_utils.rs  transfers.rs  walker.rs
website/: _headers  design.html  index.html  privacy.html  robots.txt  sitemap.xml
